--- a/css/styles.css
+++ b/css/styles.css
@@ -800,6 +800,7 @@ background-color: rgba(47, 48, 58, 0.8);
   pointer-events: none;
 }
 
+/* ---------modal-input-------------- */
 .modal-title {
   font-weight: 700;
   font-size: 20px;
@@ -810,11 +811,99 @@ background-color: rgba(47, 48, 58, 0.8);
   margin-bottom: 30px;
 }
 
+.modal-field {
+  margin-top: 10px;
+  }
+
+.modal-field:first-child {
+  margin-top: 0;
+}
+
+
+
+.input-wrapper {
+  position: relative;
+  
+}
+
 .modal-input {
   width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   background-color: transparent;
-  margin-bottom: 28px;
+  outline: transparent;
+  font-size: 14px;  
+  padding-left: 42px;  
+}
+
+.modal-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-label {
+  font-size: 12px;
+  line-height: 1.17;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-input::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  
+}
+
+.modal-input:focus,
+.modal-comment:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  outline: transparent;
+  padding: 12px 16px;
+}
+
+.modal-comment::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  
+}
+
+.modal-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  padding: 10px 52px;
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  border-color: transparent;
+  border-radius: 4px;
+  display: flex;
+  margin: 0 auto;
+  
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
