--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,6 @@ background-color: rgba(47, 48, 58, 0.8);
 
 .filter-item:hover .filter-top-text{
   transform: translateY(0);
-  /* transition: transform 250ms linear; */
 } 
 
 
@@ -752,6 +751,78 @@ background-color: rgba(47, 48, 58, 0.8);
   background-color: var(--accent-color);  
 }
 
+/* ------------footer-form--------------------- */
+.footer-field{  
+  margin-left: 93px;
+}
+
+.footer-btn {
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  padding: 10px 62px 10px 28px;
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  border-color: transparent;
+  border: none;
+  border-radius: 4px;
+  display: flex;  
+  transition: box-shadow var(--tra), color var(--tra) ;
+  position: relative;   
+}
+.icon-send {
+  position: absolute;
+  fill: var(--secondary-text-color);
+  right: 28px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: #188CE8;
+}
+.footer-input-wrapper{
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  
+}
+.footer-input-uptitle {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-text-color);
+  margin-bottom: 20px;  
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: transparent;
+  outline: transparent;
+  font-size: 16px;  
+  padding-left: 16px;  
+}
+
+.footer-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+
+/* ----------------------backdrop------------------ */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -907,7 +978,7 @@ justify-content: center;
   letter-spacing: 0.03em;
   display: flex;
   align-items: center;
-  /* margin-top: 20px; */
+  
   
 }
 
@@ -972,11 +1043,12 @@ justify-content: center;
   display: flex;
   margin: 0 auto;
   margin-top: 30px;
-  transition: box-shadow var(--tra) ;
+  transition: box-shadow var(--tra), color var(--tra) ;
   
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #188CE8;
 }
